# preq-pmob

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/cases/DoFMC/: ESCAPE33_case3_DoFMC.json  ESCAPE33_case4_DoFMC.json  case_blending_dynamic_DoFMC.json  case_blending_steady_DoFMC.json  case_blending_steady_with_steps_DoFMC.json  case_cstr_1st_order_kinetics_DoFMC.json  case_cstr_mulltiple_kinetics_DoFMC.json  case_cstr_mulltiple_kinetics_DoFMC_add_ten_eqs.json  case_cstr_mulltiple_kinetics_DoFMC_add_thirty_eqs.json  case_cstr_mulltiple_kinetics_DoFMC_thirty_eqs.json
data/cases/blending/: case_blending_dynamic.json  case_blending_steady.json
data/cases/case8_ex/: Case8_ex_cstr_extracted_from_textbooks.json
data/cases/generated_cases/: Case1_ESCAPE33_case1.json  Case2_ESCAPE33_case2.json  Case3_ESCAPE33_case3.json  Case4_ESCAPE33_case4.json  Case5_cstr_simple.json  Case6_cstr_two_species.json  Case7_cstr_multiple_reactions.json  Case8_cstr_extracted_from_paper_and_textbook.json
data/cases/many_eqs/: case_cstr_mulltiple_kinetics_add_ten_eqs.json  case_cstr_mulltiple_kinetics_add_thirty_eqs.json
experiments/: analyze_results.py  run_experiments.py  run_experiments.sh
notebooks/: ESCAPE2025.ipynb  ESCAPE33_cases.ipynb  generate_case_study_datasets.ipynb  generate_case_study_datasets_ex.ipynb
preq_pmob/: __init__.py  equation.py  equation_group.py  model_builder.py
tests/: test_equation.py  test_equation_group.py  test_model_builder.py
