[tool.poetry]
name = "preq_pmob"
version = "0.1.0"
description = ""
authors = ["s-kat0 <34226464+stktu@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "preq_pmob"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
pytest = "^8.3.3"
typed-argument-parser = "^1.10.1"
psutil = "^6.1.0"
numpy = "^2.2.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = ".git, .tox, .venv, .eggs, build, dist, docs"
extend-ignore = "E203, W503, W504"
max-line-length = 99

[tool.black]
exclude = """
/(
    .eggs
  | .git
  | .hg
  | .pytest_cache
  | .mypy_cache
  | .tox
  | .venv
  | build
  | dist
)/
"""

[tool.isort]
profile = "black"
include_trailing_comma = true
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true